chapter6_operation_management/circuit_breaker_pattern/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: circuit-breaker
  labels:
    istio-injection: enabled
